[tool.poetry]
name = "pymonstercat"
version = "0.1.0"
description = "Unofficial wrapper for Monstercat API"
authors = ["L4zzur <popovnikita01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
dotenv = "^0.0.5"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"
wheel = "^0.41.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
