[tool.poetry]
name = "pymonstercat"
version = "0.1.0"
description = "Unofficial wrapper for Monstercat API"
authors = ["L4zzur <popovnikita01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.1"
dataclass-wizard = "^0.22.2"
httpx = "^0.25.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"
wheel = "^0.41.3"
icecream = "^2.1.3"
pillow = "^10.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pymonstercat.scripts.test:main"
